--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -25,7 +25,7 @@ jobs:
           dnf install -y 'dnf-command(config-manager)'
           dnf config-manager --set-enabled crb
           dnf install -y https://dl.fedoraproject.org/pub/epel/${{ matrix.version }}/Everything/${{ matrix.arch }}/os/Packages/e/epel-release-${{ matrix.version }}-1.el${{ matrix.version }}_0.noarch.rpm
-          sed -i 's@^#baseurl=.+@baseurl=https://dl.fedoraproject.org/pub/epel/$releasever_major${releasever_minor:+.$releasever_minor}/Everything/$basearch/os/' /etc/yum.repos.d/epel.repo
+          sed -i 's@^#baseurl=.+@baseurl=https://dl.fedoraproject.org/pub/epel/$releasever_major${releasever_minor:+.$releasever_minor}/Everything/$basearch/os/@' /etc/yum.repos.d/epel.repo
           sed -i '/^metalink/ s/^/#/' /etc/yum.repos.d/epel.repo
           dnf install -y mock wget git-core openssl-devel cargo podman fuse-overlayfs rpm-build mock
           dnf builddep -y anda/{terra/{mock-configs,srpm-macros},tools/buildsys/subatomic}/*.spec
