--- a/anda/games/steam/.gitignore
+++ b/anda/games/steam/.gitignore
@@ -1,5 +1,5 @@
 # We're gonna do a whitelist approach here because
-# inline sources are now allowed
+# inline sources are not allowed
 
 *
 !.gitignore
